
     Updated udp constructor to be closer to matlab compatible

  ** TCP: add .property access to the object

  ** I2C: 
     Implement object properties 

     Added overload functions for: 
        fread
        fwrite
        get
        set

  ** PARALLEL:
     Added overload functions for: 
        fclose
        fopen
        fread
        fwrite

  ** insthwinfo: updated to show i2c ports
 
  ** added toolkit manual

Summary of important user-visible changes for instrument-control 0.4.0
-------------------------------------------------------------------

  ** SERIAL: added 'status', 'bytesavailable', 'name' and 'type'
     properties, and the following functions:
        seriallist
        flushinput
        flushoutput

  ** UDP: added 'status' and 'bytesavailable' properties and the
     following functions:
        flushinput
        flushoutput

  ** TCP: added properties to object, added overridden functions:
        get
        set
        fprintf
        fread
        fwrite
        flushinput
        flushoutput

  ** tcpip(): added wrapper to be matlab compatible(ish)

  ** distribute rpc generated files

  ** verify -M option will work on rpcgen

  ** detect if rpc_error functions allow use of const inputs

  ** prefer libtirpc over builtin rpc when detecting vxi11 functionality

  ** add lock functions used on pkg load/unlock to lock .oct files

  ** implemented instrhwinfo serial list for mac

Summary of important user-visible changes for instrument-control 0.3.1:
-------------------------------------------------------------------

  ** Updated build to allow install on octave 4.4

  ** using polling rather than signal handling to break from instrument reads

  ** insthwinfo() updated to show enabled modules

  ** added initial builtin tests for each instrument

Summary of important user-visible changes for instrument-control 0.3.0:
-------------------------------------------------------------------
